--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "type": "git",
     "url": "git+https://github.com/justynjozwiak/react-random.git"
   },
-  "keywords": [],
+  "keywords": [
+    "React",
+    "Random",
+    "Faker"
+  ],
   "author": "Justyn Jóźwiak",
   "license": "MIT",
   "bugs": {
