package.json: fix main

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-random",
   "version": "0.1.0",
   "description": "React component for rendering fake data.",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "build": "babel lib --presets babel-preset-es2015 --out-dir distribution",
     "prepublish": "npm run build",
