--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "React component for rendering fake data.",
   "main": "lib/index.js",
   "scripts": {
-    "build": "babel lib --presets babel-preset-es2015 --out-dir distribution",
-    "prepublish": "npm run build",
+    "build": "babel src/ --out-dir lib/",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
