--- a/package.json
+++ b/package.json
@@ -25,4 +25,16 @@
   "peerDependencies": {
     "react": "^15.4.2"
   },
+  "devDependencies": {
+    "babel-cli": "^6.24.0",
+    "babel-eslint": "^7.2.1",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "babelify": "^7.3.0",
+    "browserify": "^14.3.0",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^6.10.3",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
+  }
 }
