--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "babel-eslint": "^7.2.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-1": "^6.22.0",
+    "babel-register": "^6.24.0",
     "babelify": "^7.3.0",
     "browserify": "^14.3.0",
     "eslint": "^3.19.0",
