--- a/package.json
+++ b/package.json
@@ -35,7 +35,13 @@
     "babelify": "^7.3.0",
     "browserify": "^14.3.0",
     "eslint": "^3.19.0",
+    "eslint-config-standard": "^10.0.0",
+    "eslint-config-standard-react": "^4.3.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^6.10.3",
+    "eslint-plugin-standard": "^2.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   }
