--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React component for rendering fake data.",
   "main": "lib/index.js",
   "scripts": {
-    "build": "babel src/ --out-dir lib/",
+    "build": "babel src --presets babel-preset-es2015 --out-dir lib",
     "prepublish": "npm run build"
   },
   "repository": {
