--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "babel src --presets babel-preset-es2015 --out-dir lib",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "example": "browserify -t babelify --debug example/index.js -o example/bundle.js"
   },
   "repository": {
     "type": "git",
