--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "babel src --presets babel-preset-es2015 --out-dir lib",
     "prepublish": "npm run build",
-    "example": "browserify -t babelify --debug example/index.js -o example/bundle.js"
+    "example": "browserify -t babelify --debug example/index.js -o example/bundle.js",
+    "test": "mocha --compilers js:babel-core/register \"test/**/*@(.js)\"",
   },
   "repository": {
     "type": "git",
