--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-register": "^6.24.0",
     "babelify": "^7.3.0",
     "browserify": "^14.3.0",
+    "coveralls": "^2.13.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.0.0",
     "eslint-config-standard-react": "^4.3.0",
@@ -46,6 +47,9 @@
     "eslint-plugin-react": "^6.10.3",
     "eslint-plugin-standard": "^2.2.0",
     "faker": "^4.1.0",
+    "mocha": "^3.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
+    "nyc": "^10.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   }
