--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-register": "^6.24.0",
     "babelify": "^7.3.0",
     "browserify": "^14.3.0",
+    "chai": "^3.5.0",
     "coveralls": "^2.13.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.0.0",
