--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "babelify": "^7.3.0",
     "browserify": "^14.3.0",
     "chai": "^3.5.0",
+    "chai-enzyme": "^0.6.1",
     "coveralls": "^2.13.0",
+    "enzyme": "^2.8.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.0.0",
     "eslint-config-standard-react": "^4.3.0",
