--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^10.2.0",
     "react": "^15.4.2",
+    "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2"
   }
 }
