--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React component for rendering random / fake data.",
   "main": "lib/index.js",
   "scripts": {
-    "build": "babel src --presets babel-preset-es2015 --out-dir lib",
+    "build": "babel src/ --out-dir lib/",
     "prepublish": "npm run build",
     "example": "browserify -t babelify --debug example/index.js -o example/bundle.js",
     "test": "mocha --compilers js:babel-core/register \"test/**/*@(.js)\"",
