--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "homepage": "https://github.com/justynjozwiak/react-random#readme",
   "peerDependencies": {
-    "react": "^15.4.2"
+    "react": "^15.4.2",
+    "faker": "^4.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
