--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-random",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "React component for rendering random / fake data.",
   "main": "lib/index.js",
   "scripts": {
@@ -26,8 +26,7 @@
   },
   "homepage": "https://github.com/justynjozwiak/react-random#readme",
   "peerDependencies": {
-    "react": "^15.4.2",
-    "faker": "^4.1.0"
+    "react": "^15.4.2"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
@@ -57,5 +56,8 @@
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2"
+  },
+  "dependencies": {
+    "faker": "^4.1.0"
   }
 }
