--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-random",
   "version": "1.1.2",
   "description": "React component for rendering random / fake data.",
-  "main": "lib/index.js",
+  "main": "dist/umd/index.js",
   "scripts": {
     "build": "npm run build:babel | npm run build:umd",
     "build:babel": "babel lib/ --out-dir dist/babel",
